--- a/Weekly_Scoring.ipynb
+++ b/Weekly_Scoring.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled70.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOnbtztQzkiPqff82HQpuD5",
+      "authorship_tag": "ABX9TyOeeQE5oNj8IFT0HEJpxOuT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,12 +61,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 306
         },
-        "outputId": "7e7c74d5-989f-416b-d734-e67c7d077edc"
+        "outputId": "5727ec9c-79ab-4c8e-d67a-939841fe768c"
       },
       "source": [
         "qb_df.head()"
       ],
-      "execution_count": 14,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +270,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 3
         }
       ]
     },
@@ -283,12 +283,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "abb9f440-363a-4140-fc1a-098acb684c73"
+        "outputId": "dcb04c20-38e1-4bd6-f2c1-d0bb9cfc76ac"
       },
       "source": [
         "rec_df.head()"
       ],
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -468,7 +468,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 4
         }
       ]
     },
@@ -481,12 +481,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "5af9ed56-6d22-441f-a095-cac40aee6288"
+        "outputId": "d6b6c143-5256-4613-e230-38b0eca0d893"
       },
       "source": [
         "rush_df.head()"
       ],
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -648,7 +648,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 5
         }
       ]
     },
@@ -662,54 +662,47 @@
       "source": [
         "def scoring(p, w):\n",
         "  # Passing TD\n",
-        "  if p in qb_df['Player'].values:\n",
-        "      score1 = qb_df['Pass TD'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)]\n",
-        "      pass_td = score1.iloc[0]\n",
-        "  else:\n",
+        "  if (qb_df['Pass TD'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].empty):\n",
         "      pass_td = 0\n",
+        "  else:\n",
+        "      pass_td = qb_df['Pass TD'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
         "\n",
         "  # Receiving TD\n",
-        "  if p in rec_df['Player'].values:\n",
-        "      score2 = rec_df['Rec TD'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)]\n",
-        "      rec_td = score2.iloc[0]\n",
-        "  else:\n",
+        "  if (rec_df['Rec TD'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].empty):\n",
         "      rec_td = 0\n",
+        "  else:\n",
+        "      rec_td = rec_df['Rec TD'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].iloc[0]\n",
         "\n",
         "  # Rushing TD\n",
-        "  if p in rush_df['Player'].values:\n",
-        "      score3 = rush_df['Rush TD'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)]\n",
-        "      rush_td = score3.iloc[0]\n",
-        "  else:\n",
+        "  if (rush_df['Rush TD'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].empty):\n",
         "      rush_td = 0\n",
+        "  else:\n",
+        "      rush_td = rush_df['Rush TD'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].iloc[0]\n",
         "  \n",
         "  # Passing Yards\n",
-        "  if p in qb_df['Player'].values:\n",
-        "      score4 = qb_df['Pass Yds'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)]\n",
-        "      pass_yds = score4.iloc[0]\n",
-        "  else:\n",
+        "  if (qb_df['Pass Yds'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].empty):\n",
         "      pass_yds = 0\n",
+        "  else:\n",
+        "      pass_yds = qb_df['Pass Yds'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
         "\n",
         "  # Receiving Yards\n",
-        "  if p in rec_df['Player'].values:\n",
-        "      score5 = rec_df['Rec Yds'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)]\n",
-        "      rec_yds = score5.iloc[0]\n",
-        "  else:\n",
+        "  if (rec_df['Rec Yds'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].empty):\n",
         "      rec_yds = 0\n",
+        "  else:\n",
+        "      rec_yds = rec_df['Rec Yds'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].iloc[0]\n",
         "\n",
         "  # Rushing Yards\n",
-        "  if p in rush_df['Player'].values:\n",
-        "      score6 = rush_df['Rush Yds'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)]\n",
-        "      rush_yds = score6.iloc[0]\n",
-        "  else:\n",
+        "  if (rush_df['Rush Yds'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].empty):\n",
         "      rush_yds = 0\n",
+        "  else:\n",
+        "      rush_yds = rush_df['Rush Yds'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].iloc[0]\n",
         "\n",
         "  # Interceptions\n",
-        "  if p in qb_df['Player'].values:\n",
-        "      score7 = qb_df['Pass Int'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)]\n",
-        "      qb_int = score7.iloc[0]\n",
-        "  else:\n",
+        "  if (qb_df['Pass Int'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].empty):\n",
         "      qb_int = 0\n",
-        "  \n",
+        "  else:\n",
+        "      qb_int = qb_df['Pass Int'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
+        "\n",
         "  score = (pass_td * 4) + (rec_td * 6) + (rush_td * 6) + (pass_yds / 25) + (rec_yds / 10) + (rush_yds / 10) - (qb_int *2)\n",
         "  return score"
       ],
@@ -725,28 +718,28 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c5e96382-948c-4083-cd4c-431fb84f37c2"
+        "outputId": "b79955de-8a27-411c-d286-6b7dc89ecc1a"
       },
       "source": [
-        "player = 'Lamar Jackson'\n",
+        "player = 'Christian McCaffrey'\n",
         "week = 1\n",
         "\n",
         "week1_score = scoring(player, week)\n",
         "week1_score"
       ],
-      "execution_count": 104,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "33.56"
+              "32.900000000000006"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 104
+          "execution_count": 7
         }
       ]
     }
