--- a/Weekly_Scoring.ipynb
+++ b/Weekly_Scoring.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled70.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOeeQE5oNj8IFT0HEJpxOuT",
+      "authorship_tag": "ABX9TyPbIZwmL+mvVW5ACztaqfrL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,11 +57,11 @@
       "metadata": {
         "id": "W3dS7zgVgYgx",
         "colab_type": "code",
+        "outputId": "9d5d1dad-a81e-4b84-a779-4be4468f7ded",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 306
-        },
-        "outputId": "5727ec9c-79ab-4c8e-d67a-939841fe768c"
+        }
       },
       "source": [
         "qb_df.head()"
@@ -279,11 +279,11 @@
       "metadata": {
         "id": "NZpgAmLdhG8A",
         "colab_type": "code",
+        "outputId": "f8e7b17b-8dc3-4c16-914e-d0903920b516",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "dcb04c20-38e1-4bd6-f2c1-d0bb9cfc76ac"
+        }
       },
       "source": [
         "rec_df.head()"
@@ -477,11 +477,11 @@
       "metadata": {
         "id": "lTzhZKyohYbu",
         "colab_type": "code",
+        "outputId": "5a3fbccf-de56-48ec-896e-9000c959b9c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "d6b6c143-5256-4613-e230-38b0eca0d893"
+        }
       },
       "source": [
         "rush_df.head()"
@@ -714,15 +714,15 @@
       "metadata": {
         "id": "UzJ9HHrV2Pga",
         "colab_type": "code",
+        "outputId": "3a040060-1c63-451d-afaf-c7d785f6f63f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b79955de-8a27-411c-d286-6b7dc89ecc1a"
+        }
       },
       "source": [
-        "player = 'Christian McCaffrey'\n",
-        "week = 1\n",
+        "player = 'Tom Brady'\n",
+        "week = 17\n",
         "\n",
         "week1_score = scoring(player, week)\n",
         "week1_score"
@@ -733,13 +733,215 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "32.900000000000006"
+              "14.84"
             ]
           },
           "metadata": {
             "tags": []
           },
           "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "clJaJhBNQoB3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def compare(p1, p2):\n",
+        "\n",
+        "  column_names = ['Player', 'Week1', 'Week2', 'Week3', 'Week4', 'Week5', 'Week6', 'Week7', 'Week8', 'Week9',\n",
+        "                  'Week10', 'Week11', 'Week12', 'Week13', 'Week14', 'Week15', 'Week16', 'Week17']\n",
+        "  df = pd.DataFrame(columns = column_names) \n",
+        "  weekly_score1 = []\n",
+        "  weekly_score2 = []\n",
+        "\n",
+        "  for i in range(1,18):\n",
+        "      weekly_score1.append(scoring(p1, i))\n",
+        "\n",
+        "  for i in range(1,18):\n",
+        "      weekly_score2.append(scoring(p2, i))\n",
+        "\n",
+        "  df = df.append({'Player': p1,\n",
+        "                  'Week1': weekly_score1[0], \n",
+        "                  'Week2': weekly_score1[1],\n",
+        "                  'Week3': weekly_score1[2], \n",
+        "                  'Week4': weekly_score1[3], \n",
+        "                  'Week5': weekly_score1[4], \n",
+        "                  'Week6': weekly_score1[5], \n",
+        "                  'Week7': weekly_score1[6], \n",
+        "                  'Week8': weekly_score1[7], \n",
+        "                  'Week9': weekly_score1[8],\n",
+        "                  'Week10': weekly_score1[9],\n",
+        "                  'Week11': weekly_score1[10],\n",
+        "                  'Week12': weekly_score1[11],\n",
+        "                  'Week13': weekly_score1[12],\n",
+        "                  'Week14': weekly_score1[13],\n",
+        "                  'Week15': weekly_score1[14],\n",
+        "                  'Week16': weekly_score1[15], \n",
+        "                  'Week17': weekly_score1[16] \n",
+        "                   }, ignore_index=True)\n",
+        "  \n",
+        "  df = df.append({'Player': p2,\n",
+        "                  'Week1': weekly_score2[0], \n",
+        "                  'Week2': weekly_score2[1],\n",
+        "                  'Week3': weekly_score2[2], \n",
+        "                  'Week4': weekly_score2[3], \n",
+        "                  'Week5': weekly_score2[4], \n",
+        "                  'Week6': weekly_score2[5], \n",
+        "                  'Week7': weekly_score2[6], \n",
+        "                  'Week8': weekly_score2[7], \n",
+        "                  'Week9': weekly_score2[8],\n",
+        "                  'Week10': weekly_score2[9],\n",
+        "                  'Week11': weekly_score2[10],\n",
+        "                  'Week12': weekly_score2[11],\n",
+        "                  'Week13': weekly_score2[12],\n",
+        "                  'Week14': weekly_score2[13],\n",
+        "                  'Week15': weekly_score2[14],\n",
+        "                  'Week16': weekly_score2[15], \n",
+        "                  'Week17': weekly_score2[16] \n",
+        "                   }, ignore_index=True)\n",
+        "  return df"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6Ypfl8CURfjj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "player1 = 'Tom Brady'\n",
+        "player2 = 'Jimmy Garoppolo'\n",
+        "\n",
+        "compare_df = compare(player1, player2)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0PzZfaK0XR0G",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 111
+        },
+        "outputId": "df95a8dd-4248-4329-940e-5bbe2be92287"
+      },
+      "source": [
+        "compare_df.head()"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Player</th>\n",
+              "      <th>Week1</th>\n",
+              "      <th>Week2</th>\n",
+              "      <th>Week3</th>\n",
+              "      <th>Week4</th>\n",
+              "      <th>Week5</th>\n",
+              "      <th>Week6</th>\n",
+              "      <th>Week7</th>\n",
+              "      <th>Week8</th>\n",
+              "      <th>Week9</th>\n",
+              "      <th>Week10</th>\n",
+              "      <th>Week11</th>\n",
+              "      <th>Week12</th>\n",
+              "      <th>Week13</th>\n",
+              "      <th>Week14</th>\n",
+              "      <th>Week15</th>\n",
+              "      <th>Week16</th>\n",
+              "      <th>Week17</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Tom Brady</td>\n",
+              "      <td>25.64</td>\n",
+              "      <td>18.56</td>\n",
+              "      <td>20.24</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>23.92</td>\n",
+              "      <td>23.96</td>\n",
+              "      <td>11.96</td>\n",
+              "      <td>18.36</td>\n",
+              "      <td>13.40</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>8.64</td>\n",
+              "      <td>11.60</td>\n",
+              "      <td>24.34</td>\n",
+              "      <td>10.76</td>\n",
+              "      <td>13.12</td>\n",
+              "      <td>14.84</td>\n",
+              "      <td>14.84</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Jimmy Garoppolo</td>\n",
+              "      <td>8.64</td>\n",
+              "      <td>22.64</td>\n",
+              "      <td>11.08</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>15.24</td>\n",
+              "      <td>14.12</td>\n",
+              "      <td>6.04</td>\n",
+              "      <td>13.00</td>\n",
+              "      <td>28.68</td>\n",
+              "      <td>12.02</td>\n",
+              "      <td>29.66</td>\n",
+              "      <td>18.22</td>\n",
+              "      <td>11.10</td>\n",
+              "      <td>27.96</td>\n",
+              "      <td>12.60</td>\n",
+              "      <td>10.42</td>\n",
+              "      <td>11.40</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            Player  Week1  Week2  Week3  ...  Week14  Week15  Week16  Week17\n",
+              "0        Tom Brady  25.64  18.56  20.24  ...   10.76   13.12   14.84   14.84\n",
+              "1  Jimmy Garoppolo   8.64  22.64  11.08  ...   27.96   12.60   10.42   11.40\n",
+              "\n",
+              "[2 rows x 18 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
         }
       ]
     }
