--- a/Weekly_Scoring.ipynb
+++ b/Weekly_Scoring.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled70.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP5KHj28P7f2mU+mfbyHs9b",
+      "authorship_tag": "ABX9TyNQzZ+zkXmJKvKiDGLX3LP1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "W3dS7zgVgYgx",
         "colab_type": "code",
-        "outputId": "7a406610-bed4-4853-b253-e6f610931e86",
+        "outputId": "77dc8576-0cdc-4195-ebd7-5ad0cb02f05e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 306
@@ -280,7 +280,7 @@
       "metadata": {
         "id": "NZpgAmLdhG8A",
         "colab_type": "code",
-        "outputId": "81142b23-bfae-46a5-c6f6-1c7d2a99e1fa",
+        "outputId": "27d61be1-97dc-4a38-ae0c-88f8ca9cabba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -478,7 +478,7 @@
       "metadata": {
         "id": "lTzhZKyohYbu",
         "colab_type": "code",
-        "outputId": "7e51f27d-ae62-4ccd-a92f-2522293acea2",
+        "outputId": "cf7078d7-9666-4b97-ee00-a9fcfba68194",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -658,11 +658,11 @@
       "metadata": {
         "id": "62ODdcfVcCzC",
         "colab_type": "code",
+        "outputId": "459fb7ef-879d-4c92-a861-489c8569996b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "2c89d069-8f33-4aa9-fab3-b7ec05622237"
+        }
       },
       "source": [
         "rank_df.head()"
@@ -842,61 +842,81 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "EgaGilVfB12h",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def pull_stats(df, col, p, w):\n",
+        "    # Passing TD\n",
+        "    if (df[col].loc[(df['Player']==p) & (df['Week']==w)].empty):\n",
+        "        stat = 0\n",
+        "    else:\n",
+        "        stat = df[col].loc[(df['Player']==p) & (df['Week']==w)].iloc[0]\n",
+        "        opp = df['Opp'].loc[(df['Player']==p) & (df['Week']==w)].iloc[0]\n",
+        "    return stat, opp"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "0UAnImJPpa0_",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "def scoring(p, w):\n",
-        "  opponent = 'None'\n",
+        "    opponent = 'None'\n",
         "\n",
-        "  # Passing TD\n",
-        "  if (qb_df['Pass TD'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].empty):\n",
-        "      pass_td = 0\n",
-        "  else:\n",
-        "      pass_td = qb_df['Pass TD'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
-        "      opponent = qb_df['Opp'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
+        "    # Passing TD\n",
+        "    if (qb_df['Pass TD'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].empty):\n",
+        "        pass_td = 0\n",
+        "    else:\n",
+        "        pass_td = qb_df['Pass TD'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
+        "        opponent = qb_df['Opp'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
         "\n",
-        "  # Receiving TD\n",
-        "  if (rec_df['Rec TD'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].empty):\n",
-        "      rec_td = 0\n",
-        "  else:\n",
-        "      rec_td = rec_df['Rec TD'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].iloc[0]\n",
-        "      opponent = rec_df['Opp'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].iloc[0]\n",
+        "    # Receiving TD\n",
+        "    if (rec_df['Rec TD'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].empty):\n",
+        "        rec_td = 0\n",
+        "    else:\n",
+        "        rec_td = rec_df['Rec TD'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].iloc[0]\n",
+        "        opponent = rec_df['Opp'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].iloc[0]\n",
         "\n",
-        "  # Rushing TD\n",
-        "  if (rush_df['Rush TD'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].empty):\n",
-        "      rush_td = 0\n",
-        "  else:\n",
-        "      rush_td = rush_df['Rush TD'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].iloc[0]\n",
-        "      opponent = rush_df['Opp'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].iloc[0]\n",
+        "    # Rushing TD\n",
+        "    if (rush_df['Rush TD'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].empty):\n",
+        "        rush_td = 0\n",
+        "    else:\n",
+        "        rush_td = rush_df['Rush TD'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].iloc[0]\n",
+        "        opponent = rush_df['Opp'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].iloc[0]\n",
         "  \n",
-        "  # Passing Yards\n",
-        "  if (qb_df['Pass Yds'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].empty):\n",
-        "      pass_yds = 0\n",
-        "  else:\n",
-        "      pass_yds = qb_df['Pass Yds'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
+        "    # Passing Yards\n",
+        "    if (qb_df['Pass Yds'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].empty):\n",
+        "        pass_yds = 0\n",
+        "    else:\n",
+        "        pass_yds = qb_df['Pass Yds'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
         "\n",
-        "  # Receiving Yards\n",
-        "  if (rec_df['Rec Yds'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].empty):\n",
-        "      rec_yds = 0\n",
-        "  else:\n",
-        "      rec_yds = rec_df['Rec Yds'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].iloc[0]\n",
+        "    # Receiving Yards\n",
+        "    if (rec_df['Rec Yds'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].empty):\n",
+        "        rec_yds = 0\n",
+        "    else:\n",
+        "        rec_yds = rec_df['Rec Yds'].loc[(rec_df['Player']==p) & (rec_df['Week']==w)].iloc[0]\n",
         "\n",
-        "  # Rushing Yards\n",
-        "  if (rush_df['Rush Yds'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].empty):\n",
-        "      rush_yds = 0\n",
-        "  else:\n",
-        "      rush_yds = rush_df['Rush Yds'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].iloc[0]\n",
+        "    # Rushing Yards\n",
+        "    if (rush_df['Rush Yds'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].empty):\n",
+        "        rush_yds = 0\n",
+        "    else:\n",
+        "        rush_yds = rush_df['Rush Yds'].loc[(rush_df['Player']==p) & (rush_df['Week']==w)].iloc[0]\n",
         "\n",
-        "  # Interceptions\n",
-        "  if (qb_df['Pass Int'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].empty):\n",
-        "      qb_int = 0\n",
-        "  else:\n",
-        "      qb_int = qb_df['Pass Int'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
+        "    # Interceptions\n",
+        "    if (qb_df['Pass Int'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].empty):\n",
+        "        qb_int = 0\n",
+        "    else:\n",
+        "        qb_int = qb_df['Pass Int'].loc[(qb_df['Player']==p) & (qb_df['Week']==w)].iloc[0]\n",
         "\n",
-        "  score = (pass_td * 4) + (rec_td * 6) + (rush_td * 6) + (pass_yds / 25) + (rec_yds / 10) + (rush_yds / 10) - (qb_int *2)\n",
-        "  return score, opponent"
+        "    score = (pass_td * 4) + (rec_td * 6) + (rush_td * 6) + (pass_yds / 25) + (rec_yds / 10) + (rush_yds / 10) - (qb_int *2)\n",
+        "    return score, opponent"
       ],
       "execution_count": 0,
       "outputs": []
@@ -910,8 +930,8 @@
       },
       "source": [
         "def rank(p, w):\n",
-        "  ranking = 1\n",
-        "  return ranking"
+        "    ranking = 1\n",
+        "    return ranking"
       ],
       "execution_count": 0,
       "outputs": []
@@ -921,7 +941,7 @@
       "metadata": {
         "id": "UzJ9HHrV2Pga",
         "colab_type": "code",
-        "outputId": "bd7b2589-e928-46dc-fdf4-dd6995d22771",
+        "outputId": "e834e732-6d24-4136-f189-958d13879f4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -953,67 +973,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "clJaJhBNQoB3",
+        "id": "YjK4rnv7-rxo",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "def compare(p1, p2):\n",
-        "\n",
-        "  column_names = ['Player', 'Week1', 'Week2', 'Week3', 'Week4', 'Week5', 'Week6', 'Week7', 'Week8', 'Week9',\n",
-        "                  'Week10', 'Week11', 'Week12', 'Week13', 'Week14', 'Week15', 'Week16', 'Week17']\n",
-        "  df = pd.DataFrame(columns = column_names) \n",
-        "  weekly_score1 = []\n",
-        "  weekly_score2 = []\n",
-        "\n",
-        "  for i in range(1,18):\n",
-        "      score1, opp1 = scoring(p1, i)\n",
-        "      weekly_score1.append(score1)\n",
-        "\n",
-        "  for i in range(1,18):\n",
-        "      score2, opp2 = scoring(p2, i)\n",
-        "      weekly_score2.append(score2)\n",
-        "\n",
-        "  df = df.append({'Player': p1,\n",
-        "                  'Week1': weekly_score1[0], \n",
-        "                  'Week2': weekly_score1[1],\n",
-        "                  'Week3': weekly_score1[2], \n",
-        "                  'Week4': weekly_score1[3], \n",
-        "                  'Week5': weekly_score1[4], \n",
-        "                  'Week6': weekly_score1[5], \n",
-        "                  'Week7': weekly_score1[6], \n",
-        "                  'Week8': weekly_score1[7], \n",
-        "                  'Week9': weekly_score1[8],\n",
-        "                  'Week10': weekly_score1[9],\n",
-        "                  'Week11': weekly_score1[10],\n",
-        "                  'Week12': weekly_score1[11],\n",
-        "                  'Week13': weekly_score1[12],\n",
-        "                  'Week14': weekly_score1[13],\n",
-        "                  'Week15': weekly_score1[14],\n",
-        "                  'Week16': weekly_score1[15], \n",
-        "                  'Week17': weekly_score1[16] \n",
-        "                   }, ignore_index=True)\n",
-        "  \n",
-        "  df = df.append({'Player': p2,\n",
-        "                  'Week1': weekly_score2[0], \n",
-        "                  'Week2': weekly_score2[1],\n",
-        "                  'Week3': weekly_score2[2], \n",
-        "                  'Week4': weekly_score2[3], \n",
-        "                  'Week5': weekly_score2[4], \n",
-        "                  'Week6': weekly_score2[5], \n",
-        "                  'Week7': weekly_score2[6], \n",
-        "                  'Week8': weekly_score2[7], \n",
-        "                  'Week9': weekly_score2[8],\n",
-        "                  'Week10': weekly_score2[9],\n",
-        "                  'Week11': weekly_score2[10],\n",
-        "                  'Week12': weekly_score2[11],\n",
-        "                  'Week13': weekly_score2[12],\n",
-        "                  'Week14': weekly_score2[13],\n",
-        "                  'Week15': weekly_score2[14],\n",
-        "                  'Week16': weekly_score2[15], \n",
-        "                  'Week17': weekly_score2[16] \n",
-        "                   }, ignore_index=True)\n",
-        "  return df"
+        "def add_row(df, p, value_list):\n",
+        "    df = df.append({'Player': p,\n",
+        "                    'Week1': value_list[0], \n",
+        "                    'Week2': value_list[1],\n",
+        "                    'Week3': value_list[2], \n",
+        "                    'Week4': value_list[3], \n",
+        "                    'Week5': value_list[4], \n",
+        "                    'Week6': value_list[5], \n",
+        "                    'Week7': value_list[6], \n",
+        "                    'Week8': value_list[7], \n",
+        "                    'Week9': value_list[8],\n",
+        "                    'Week10': value_list[9],\n",
+        "                    'Week11': value_list[10],\n",
+        "                    'Week12': value_list[11],\n",
+        "                    'Week13': value_list[12],\n",
+        "                    'Week14': value_list[13],\n",
+        "                    'Week15': value_list[14],\n",
+        "                    'Week16': value_list[15], \n",
+        "                    'Week17': value_list[16] \n",
+        "                     }, ignore_index=True)\n",
+        "    return df\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1021,67 +1006,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t6E4Sl0qa2IU",
+        "id": "clJaJhBNQoB3",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "def rankings(p1, p2):\n",
+        "def compare(p1, p2):\n",
         "\n",
-        "  column_names = ['Player', 'Week1', 'Week2', 'Week3', 'Week4', 'Week5', 'Week6', 'Week7', 'Week8', 'Week9',\n",
-        "                  'Week10', 'Week11', 'Week12', 'Week13', 'Week14', 'Week15', 'Week16', 'Week17']\n",
-        "  df = pd.DataFrame(columns = column_names) \n",
-        "  weekly_rank1 = []\n",
-        "  weekly_rank2 = []\n",
+        "    column_names = ['Player', 'Week1', 'Week2', 'Week3', 'Week4', 'Week5', 'Week6', 'Week7', 'Week8', 'Week9',\n",
+        "                    'Week10', 'Week11', 'Week12', 'Week13', 'Week14', 'Week15', 'Week16', 'Week17']\n",
+        "    df1 = pd.DataFrame(columns = column_names)\n",
+        "    df2 = pd.DataFrame(columns = column_names)\n",
+        "    weekly_score1 = []\n",
+        "    weekly_score2 = []\n",
+        "    weekly_rank1 = []\n",
+        "    weekly_rank2 = []\n",
         "\n",
-        "  for i in range(1,18):\n",
-        "      score1, opp1 = scoring(p1, i)\n",
-        "      weekly_rank1.append(opp1)\n",
+        "    for i in range(1,18):\n",
+        "        score1, opp1 = scoring(p1, i)\n",
+        "        weekly_score1.append(score1)\n",
+        "        weekly_rank1.append(opp1)\n",
         "\n",
-        "  for i in range(1,18):\n",
-        "      score2, opp2 = scoring(p2, i)\n",
-        "      weekly_rank2.append(opp2)\n",
+        "    for i in range(1,18):\n",
+        "        score2, opp2 = scoring(p2, i)\n",
+        "        weekly_score2.append(score2)\n",
+        "        weekly_rank2.append(opp2)\n",
         "\n",
-        "  df = df.append({'Player': p1,\n",
-        "                  'Week1': weekly_rank1[0], \n",
-        "                  'Week2': weekly_rank1[1],\n",
-        "                  'Week3': weekly_rank1[2], \n",
-        "                  'Week4': weekly_rank1[3], \n",
-        "                  'Week5': weekly_rank1[4], \n",
-        "                  'Week6': weekly_rank1[5], \n",
-        "                  'Week7': weekly_rank1[6], \n",
-        "                  'Week8': weekly_rank1[7], \n",
-        "                  'Week9': weekly_rank1[8],\n",
-        "                  'Week10': weekly_rank1[9],\n",
-        "                  'Week11': weekly_rank1[10],\n",
-        "                  'Week12': weekly_rank1[11],\n",
-        "                  'Week13': weekly_rank1[12],\n",
-        "                  'Week14': weekly_rank1[13],\n",
-        "                  'Week15': weekly_rank1[14],\n",
-        "                  'Week16': weekly_rank1[15], \n",
-        "                  'Week17': weekly_rank1[16] \n",
-        "                   }, ignore_index=True)\n",
+        "    df1 = add_row(df1, p1, weekly_score1)\n",
+        "    df1 = add_row(df1, p2, weekly_score2)\n",
+        "\n",
+        "    df2 = add_row(df2, p1, weekly_rank1)\n",
+        "    df2 = add_row(df2, p2, weekly_rank2)\n",
         "  \n",
-        "  df = df.append({'Player': p2,\n",
-        "                  'Week1': weekly_rank2[0], \n",
-        "                  'Week2': weekly_rank2[1],\n",
-        "                  'Week3': weekly_rank2[2], \n",
-        "                  'Week4': weekly_rank2[3], \n",
-        "                  'Week5': weekly_rank2[4], \n",
-        "                  'Week6': weekly_rank2[5], \n",
-        "                  'Week7': weekly_rank2[6], \n",
-        "                  'Week8': weekly_rank2[7], \n",
-        "                  'Week9': weekly_rank2[8],\n",
-        "                  'Week10': weekly_rank2[9],\n",
-        "                  'Week11': weekly_rank2[10],\n",
-        "                  'Week12': weekly_rank2[11],\n",
-        "                  'Week13': weekly_rank2[12],\n",
-        "                  'Week14': weekly_rank2[13],\n",
-        "                  'Week15': weekly_rank2[14],\n",
-        "                  'Week16': weekly_rank2[15], \n",
-        "                  'Week17': weekly_rank2[16] \n",
-        "                   }, ignore_index=True)\n",
-        "  return df"
+        "    return df1, df2"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1097,7 +1054,7 @@
         "player1 = 'Tom Brady'\n",
         "player2 = 'Jimmy Garoppolo'\n",
         "\n",
-        "compare_df = compare(player1, player2)"
+        "compare_df, ranking_df = compare(player1, player2)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1107,16 +1064,16 @@
       "metadata": {
         "id": "0PzZfaK0XR0G",
         "colab_type": "code",
+        "outputId": "9bb471ea-cd21-44ca-d073-96e76d163c76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 111
-        },
-        "outputId": "dd3335e3-5a6c-4dbc-9d68-f45e8afeede9"
+        }
       },
       "source": [
         "compare_df.head()"
       ],
-      "execution_count": 18,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1218,38 +1175,25 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 13
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R9OzhWFVcmPK",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "ranking_df = rankings(player1, player2)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "dn92i7Krc3s8",
         "colab_type": "code",
+        "outputId": "3eca8d0a-07a8-4dc4-b58b-8b9689e77671",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 111
-        },
-        "outputId": "13cbe0f4-a25d-4a68-e77e-e08de860062b"
+        }
       },
       "source": [
         "ranking_df.head()"
       ],
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1351,7 +1295,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 14
         }
       ]
     }
